# MulanAndroid

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/chan/mulan/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chan/mulan/: MainActivity.java
app/src/main/java/com/chan/mulan/demo/: MainActivity.java  SplashActivity.java
app/src/main/res/layout/: activity_main.xml  activity_splash.xml
app/src/main/res/raw/: etc.md  simple.md
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
mulan/: CMakeLists.txt  build.gradle
mulan/src/androidTest/java/com/chan/mulan/: ExampleInstrumentedTest.java
mulan/src/main/: AndroidManifest.xml
mulan/src/main/cpp/: com_chan_mulan_Mulan.cpp  com_chan_mulan_Mulan.h
mulan/src/main/cpp/grammer/: GrammarParser.cpp  GrammarParser.h
mulan/src/main/cpp/lexica/: LexicalParser.cpp  LexicalParser.h
mulan/src/main/cpp/log/: Logger.h
mulan/src/main/cpp/misc/: JavaString2RawStringHolder.cpp  JavaString2RawStringHolder.h  RawString2JavaStringHolder.cpp  RawString2JavaStringHolder.h
mulan/src/main/cpp/render/: AndroidRenderer.cpp  AndroidRenderer.h  HtmlRenderer.cpp  HtmlRenderer.h  MiddlewareRenderer.h  RendererUnit.h
mulan/src/main/cpp/symbol/: Symbol.h
mulan/src/main/cpp/token/: Token.h
mulan/src/main/cpp/utils/: CharUtils.h
mulan/src/main/java/com/chan/mulan/: Mulan.java
mulan/src/main/java/com/chan/mulan/adapter/: MarkdownAdapter.java
mulan/src/main/java/com/chan/mulan/data/: Data.java  ImageData.java  NewLineData.java  OrderedListItemData.java  ReferenceData.java  TextureData.java  TitleData.java  UnorderedListItemData.java
mulan/src/main/java/com/chan/mulan/misc/: SpannableBuilder.java
mulan/src/main/java/com/chan/mulan/renderer/: MarkdownRenderer.java
mulan/src/main/java/com/chan/mulan/span/: LinkSpan.java
mulan/src/main/java/com/chan/mulan/view/: ImageView.java  MarkdownView.java  NewLineView.java  OrderedListItemView.java  ReferenceView.java  TextureView.java  TitleView.java  UnorderedListItemView.java
mulan/src/main/res/layout/: image.xml  new_line.xml  reference.xml
mulan/src/main/res/values/: colors.xml  dimens.xml  strings.xml
mulan/src/test/java/com/chan/mulan/: ExampleUnitTest.java
